[package]
name = "personalis"
version = "0.0.1"
authors = ["discite <discite@pm.me>"]
edition = "2018"
description = "A personal project to make the most simple, yet secret journal"
license = "Apache-2.0"
repository = "https://github.com/discite/personalis"
homepage = "https://github.com/discite/personalis/tree/v0.0.1"
documentation = "https://docs.rs/personalis/0.0.1"
keywords = [] #TODO
categories = [] #TODO
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"COPYRIGHT.md",
	"LICENSE-*",
	"README.md",
	"SECURITY.md",
]
resolver = "2"
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "discite/personalis" }
is-it-maintained-open-issues = { repository = "discite/personalis" }
maintenance = { status = "experimental" }                                 # This may differ between branches.

[dev-dependencies]
cargo-husky = "1.5.0"
git_info = "0.1.2"
version-sync = "0.9.3"
wasm-bindgen-test = "0.3.28"
